--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=eli
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/eli?allowPublicKeyRetrieval=true&rewriteBatchedStatements=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&useLegacyDatetimeCode=true&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
 
 
